# wasm--elementary-cellular-automaton

./: Cargo.toml  README.md
src/: lib.rs
