[package]
name = "wasm-elementary-cellular-automaton"
version = "0.3.2"
edition = "2021"

[dependencies]
elementary-cellular-automaton = "0.2.0"
wasm-bindgen = "0.2.95"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.scripts]
build = "rm -rf pkg && wasm-pack build --target bundler"
publish = "wasm-pack publish"
